results/SVCOMP/0-shot/log-assert4-2024_03_18_23_18_38.txt
class assert4 {
  //@ requires i >= 0;
  //@ ensures \result == 1 || \result == 0 || \result == -1;
  public static int func(int i) {
    if (i >= 10)
      //@ assert i >= 10;
      //@ assert i < 20 ==> \result == 0;
      //@ assert i >= 20 ==> \result == 1;
      return (i >= 20) ? 1 : 0;
    else
      //@ assert i < 10;
      //@ assert \result == -1;
      return -1;
  }
}
/home/max/Documents/JMLGPT/tmp/assert4.java:7: error: A \result expression may not be in a assert clause
      //@ assert i < 20 ==> \result == 0;
                             ^
/home/max/Documents/JMLGPT/tmp/assert4.java:8: error: A \result expression may not be in a assert clause
      //@ assert i >= 20 ==> \result == 1;
                              ^
/home/max/Documents/JMLGPT/tmp/assert4.java:12: error: A \result expression may not be in a assert clause
      //@ assert \result == -1;
                  ^
3 errors

